# ffxvi-mod-manager

./: .gitignore  .gitmodules  LICENSE  README.md  biome.json  build-server.ps1  bun.lockb  lib.rs  package.json  tauri-env.example.ps1  tsconfig.json
.github/workflows/: release.yml
api/: ffxvi-mod-manager-api.sln
api/Api/: Api.csproj  Program.cs  WeatherForecast.cs  appsettings.Example.json
api/Api/Controllers/: WeatherForecastController.cs
api/Api/Properties/: launchSettings.json
api/Database/: Database.csproj  FFXVIModManagerDatabase.cs
api/Database/Configurations/: ModConfiguration.cs  ModVersionConfiguration.cs  UserConfiguration.cs
api/Database/Models/: Mod.cs  ModExternalLink.cs  ModVersion.cs  User.cs
app/: README.md  build-server.ps1  buildlog.txt  bun.lockb  components.json  next.config.mjs  package.json
app/(main)/: layout.tsx  page.tsx
app/(main)/installed/: page.tsx
app/(main)/settings/: page.tsx
app/app/: layout.tsx  page.tsx
app/interop/: mod.ts  pack.ts
app/src-tauri/: .gitignore  Cargo.toml  build.ps1  generate_binaries.ps1  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/loading/: index.html
app/src-tauri/src/: lib.rs
app/src-tauri/src/appstate/: mod.rs
app/src-tauri/src/config/: mod.rs
app/src-tauri/src/pack/: mod.rs
app/src-tauri/src/server/: mod.rs
components/: theme-toggle.tsx
components/mod/: ModCard.tsx
components/navigation/: MainSidebar.tsx  MainTopbar.tsx
components/ui/: button.tsx  input.tsx  progress.tsx
components/update/: SidebarUpdate.tsx
lib/context/: ModContext.tsx  UserContext.tsx
lib/interop/: pack.ts
lib/tools/: deploy.ts  import.ts  updater.ts
src-tauri/: Cargo.toml  generate_binaries.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/appstate/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/pack/: mod.rs
src-tauri/src/server/: mod.rs
(+28 files in other folders)
