[package]
name = "ffxvi-mod-manager"
version = "0.1.0"
description = "Manage your mods here, and deliver your .pac's to the game"
authors = ["Thomas Aunvik (aka Thaun_)"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.3", features = [] }

[dependencies]
serde_json = "1.0.125"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.6", features = ["protocol-asset"] }
tauri-plugin-shell = { version = "2.0.0-rc.2" }

tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.2"
tauri-plugin-log = "2.0.0-rc.1"
log = "0.4.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0-rc.1"
